# Django_educational_store

./: .gitignore  README.md
myfistsite/: .dockerignore  .env.example  .gitignore  Dockerfile  README_dev_command.md  _MANIFEST.json  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  schema.yaml
myfistsite/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
myfistsite/accounts/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_options.py  0004_profile_phone_unique.py
myfistsite/accounts/tests/: test_auth.py  test_avatar_profiles.py  test_profiles.py
myfistsite/blogapp/: models.py  tests.py  urls.py  views.py
myfistsite/blogapp/migrations/: 0001_initial.py  0002_seed_demo_articles.py
myfistsite/infra/loki/: loki-config.yaml
myfistsite/infra/promtail/: promtail-config.yaml  promtail-config.yml
myfistsite/myfistsite/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
myfistsite/scripts/: deploy_vm.sh  install_docker_ubuntu.sh  smoke.sh  smoke_check.sh
myfistsite/shopapp/: admin.py  api.py  apps.py  cart.py  checkout.py  content_pages.py  forms.py  models.py  order_history.py  order_views.py  payment.py  serializers.py  signals.py  sitemaps.py  urls.py  views.py
myfistsite/shopapp/fixtures/: orders.json  products.json  users.json
myfistsite/shopapp/migrations/: 0001_initial.py  0002_product_created.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_product_created_by.py  0008_order_promo_code.py  0009_product_image.py  (+7 more)
(+74 files in other folders)
