[tool.poetry]
name = "myfistsite"
version = "0.1.0"
description = "Django project for Docker deployment practice"
authors = ["Student <student@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
Django = "6.0.4"
asgiref = "3.11.1"
sqlparse = "0.5.5"
Pillow = "12.2.0"
djangorestframework = "*"
django-filter = "*"
drf-spectacular = "*"
django-debug-toolbar = "6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"